Add logs function (#1108)
