# api/casaos/openapi.yaml
@@ -59,6 +59,22 @@ paths:
           $ref: "#/components/responses/GetHealthPortsOK"
         "500":
           $ref: "#/components/responses/ResponseInternalServerError"
+  /health/logs:
+    get:
+      tags:
+        - Health methods
+      summary: Get log
+      operationId: getHealthlogs
+      responses:
+        "200":
+          description: OK
+          content:
+            application/octet-stream:
+              schema:
+                type: string
+                format: binary
+        "500":
+          $ref: "#/components/responses/ResponseInternalServerError"
 
   /file/test:
     get:
